--- a/rlib/build.gradle
+++ b/rlib/build.gradle
@@ -1,9 +1,13 @@
 apply plugin: 'com.android.library'
 
+ext {
+    versions = [
+            glide: '4.8.0',
+    ]
+}
+
 android {
     compileSdkVersion 28
-
-
 
     defaultConfig {
         minSdkVersion 21
@@ -31,4 +35,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
+    implementation("com.github.bumptech.glide:glide:${versions.glide}")
 }
