--- a/gradle.properties
+++ b/gradle.properties
@@ -16,3 +16,11 @@ org.gradle.jvmargs=-Xmx1536m
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
 
+#包信息
+GROUP_ID = com.ryan.rlib
+
+# Licence信息
+PROJ_LICENCE_NAME=The Apache Software License, Version 2.0
+PROJ_LICENCE_URL=http://www.apache.org/licenses/LICENSE-2.0.txt
+PROJ_LICENCE_DEST=repo
+
