--- a/rlib/build.gradle
+++ b/rlib/build.gradle
@@ -4,6 +4,8 @@ apply plugin: 'maven'
 ext {
     versions = [
             glide: '4.8.0',
+            retrofit : '2.5.0',
+            rxAndroid: '2.1.0',
     ]
 }
 
@@ -40,11 +42,11 @@ uploadArchives{
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-
     implementation 'com.android.support:appcompat-v7:28.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
     implementation("com.github.bumptech.glide:glide:${versions.glide}")
+    implementation("com.squareup.retrofit2:retrofit:${versions.retrofit}")
+    implementation("com.squareup.retrofit2:converter-gson:${versions.retrofit}")
+    implementation("com.squareup.retrofit2:adapter-rxjava2:${versions.retrofit}")
+    implementation("io.reactivex.rxjava2:rxandroid:${versions.rxAndroid}")
+    implementation("com.squareup.okhttp3:logging-interceptor:3.5.0")
 }
